# Romanized-Khmer-to-Khmer-Transliteration

./: .gitignore  README.md  pyproject.toml  test.py
khmer_transliterator/: __init__.py  _inference.py  _model.py  cli.py  preprocessing.py  web.py
khmer_transliterator/templates/: index.html
khmer_transliterator/weights/: bi_gru_attention_khmer_transliterator.keras  gru_transliteration_assets.pkl  khmer_dictionary.txt
tests/: test_transliterator.py
